fix farmer sign_up view customer sign_up view

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -29,6 +29,11 @@ ja:
         restrict_dependent_destroy:
           has_one: "%{record}が存在しているので削除できません"
           has_many: "%{record}が存在しているので削除できません"
+    # attributes:
+      # customer:
+        # ここに書く
+        # カラム名: 表示名
+
   date:
     abbr_day_names:
     - 日
