--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -58,8 +58,8 @@ ja:
         unconfirmed_email: 未確認Eメール
         unlock_token: ロック解除用トークン
         updated_at: 更新日
-        name: 名
-        name_kana: 姓
+        name: 名前
+        name_kana: フリガナ
         postal_code: 郵便番号
         address: 住所
         telephone_number: 電話番号
